# MSP430-Enc28j60-Driver-and-Basic-Web-Client

./: .clang-format  CMakeLists.txt  arp_test.c  enc28j60.c  enc28j60.h  ipstack.c  ipstack.h  main.c  spi.c  spi.h  spi_test.c
include/: ipstack.h
src/: CMakeLists.txt  arp_test.c  enc28j60.c  spi_test.c
